completed-user-UI

--- a/css/hotel.css
+++ b/css/hotel.css
@@ -6,6 +6,7 @@
 :root {
   --main-transition: all .3s linear;
   --lightblue: #00D3FB;
+  --darkblue: #01bbe0;
 }
 
 * {
@@ -454,7 +455,128 @@ input[type="date"] {
   border-radius: .3rem;
 }
 
-.find-hotel:title {}
+
+
+
+
+/* User Section */
+
+.user-manage-btn {
+  border: none;
+  background: transparent;
+  transition: var(--main-transition);
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+}
+
+.user-icon {
+  position: relative;
+}
+.user-manage-box{
+  position: absolute;
+  bottom:-7rem;
+  left: -3.8rem;
+  width:9rem;
+  height: 0rem;
+  overflow: hidden;
+  z-index: 2;
+  background-color: #fff;
+  box-shadow: 0 0 8px #ccc;
+  display: flex;
+  flex-direction: column;
+  transition: all .1s linear;
+}
+.user-manage-box.show-manage-box{
+  height: 6rem;
+  overflow: visible;
+}
+.user-manage-box::before {
+  content: "\f0de";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+    position: absolute;
+    color: var(--lightblue);
+    top: -.8rem;
+    left: 45%;
+    font-size: 1.9rem;
+}
+.manage-header{
+  width:100%;
+  height:30%;
+  background-color: var(--lightblue);
+  color: white;
+  text-align: center;
+  font-size: .7rem;
+  display:grid;
+  place-items: center;
+  grid-template-columns: auto auto;
+  
+
+}
+.manage-header .user-name{
+  width:6rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+
+}
+.user-manage-box .drop-down{
+  list-style-type: none;
+  display:flex;
+  flex-direction: column;
+  width:100%;
+  height:70%;
+}
+.drop-down li{
+  width:100%;
+}
+.drop-down .manage-user-btn{
+  width:100%;
+  border: none;
+  height: 2.2rem;
+  background-color: #fff;
+  transition: var(--main-transition);
+  cursor: pointer;
+  font-weight: bold;
+}
+.drop-down .manage-user-btn:hover{
+  background-color: #d5f4ff;
+}
+.manage-user-btn i{
+  color:var(--lightblue);
+}
+.user-manage-btn.login {
+  /* margin-top: -1rem; */
+  border: 1px solid var(--lightblue);
+  border-radius: 50%;
+  padding: .4rem;
+  background-color: #eee;
+
+}
+.user-manage-btn .fas.fa-user{
+  display:none;
+}
+.login .far.fa-user{
+  display: none;
+}
+.login .fas.fa-user{
+  display: block;
+}
+.user-manage-btn:hover {
+  color: var(--lightblue);
+}
+
+.user-manage-btn:hover .fa-chevron-down {
+  transform: translateY(.4rem);
+}
+
+.user-manage-btn .fa-chevron-down {
+  transform: translateY(0rem);
+  transition: var(--main-transition);
+  font-size: .6rem;
+}
 
 
 
@@ -1274,4 +1396,658 @@ span:hover::before {
 .page-btn-center button.active {
   background-color: #009FD9;
   color: #fff;
+}
+
+
+
+
+/* Login Section */
+.overlay-login {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(77, 75, 75, 0.7);
+  z-index: 4;
+  display: grid;
+  place-items: center;
+  visibility: hidden;
+  transition: var(--main-transition);
+}
+
+.show-overlay-login {
+  visibility: visible;
+}
+
+.login-container {
+  width: 40%;
+  height: 80vh;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  border-radius: .4rem;
+  overflow: hidden;
+  transform: translateY(-120%);
+  transition: var(--main-transition);
+}
+
+.show-login-container {
+  transform: translateY(0%);
+}
+
+.login-header {
+
+  width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.slide-login {
+  width: 100%;
+  position: relative;
+  transform: translateX(100%);
+  transition: var(--main-transition);
+}
+
+.show-register {
+  transform: translateX(0%);
+}
+
+.login-header button {
+  background-color: var(--darkblue);
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 1.2rem;
+  transition: var(--main-transition);
+}
+
+.login-user {
+  width: 45%;
+  height: 100%;
+}
+
+.register-user {
+  width: 45%;
+  height: 100%;
+}
+
+.login-header button.active {
+  background-color: #fff;
+  color: var(--lightblue);
+}
+
+.close-overlay-login {
+  width: 10%;
+  height: 100%;
+  color: rgb(197, 2, 2);
+}
+
+.login-center {
+  width: 40vw;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+  transform: translateX(-100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hide-login {
+  transform: translateX(100%);
+}
+
+.login-center form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.link-account {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 2rem 1rem;
+  border-bottom: 1px rgb(231, 231, 231) solid;
+  padding-bottom: 1.6rem;
+  position: relative;
+}
+
+.link-account::after {
+  content: "Or";
+  background-color: #fff;
+  width: 3rem;
+  height: 1rem;
+  font-size: 1rem;
+  position: absolute;
+  bottom: -.3rem;
+  text-align: center;
+  /* font-weight: bold; */
+  left: 45%;
+}
+
+.link-fb {
+  width: 49%;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  padding: .5rem 0;
+  background-color: #1877F2;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.link-fb i {
+  margin-right: .5rem;
+}
+
+.link-google {
+  width: 49%;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  padding: .5rem 0;
+  background-color: #EA4335;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.link-google i {
+  margin-right: .5rem;
+}
+
+.title-login {
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: .5rem 0 1rem 0;
+  transition: var(--main-transition);
+}
+
+.user-name-login-box {
+  width: 90%;
+  margin: 1rem auto;
+  position: relative;
+}
+
+.user-name-login {
+  height: 2rem;
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: .4rem;
+  transition: var(--main-transition);
+  padding: .8rem;
+  font-size: 1rem;
+}
+
+.user-name-login-box:before {
+  content: "Email";
+  font-size: 1.1rem;
+  position: absolute;
+  border-radius: 2rem;
+  top: .3rem;
+  left: 1rem;
+  border-radius: 1rem;
+  color: #aaa;
+  transition: var(--main-transition);
+}
+
+.user-name-login-box::after {
+  content: "*";
+  height: .3rem;
+  font-size: 1.3rem;
+  position: absolute;
+  top: .2rem;
+  left: 4rem;
+  color: red;
+  transition: var(--main-transition);
+}
+
+.user-name-login:focus {
+  border: 1px solid var(--lightblue);
+  box-shadow: 0 0px 5px var(--lightblue);
+}
+
+.user-name-login-box.move-top:before,
+.user-name-login-box.move-top:after {
+  transform: translateY(-1.2rem);
+  background-color: #fff;
+  font-size: 1rem;
+  margin-left: -.5rem;
+
+}
+
+.password-login-box {
+  width: 90%;
+  margin: 1rem auto;
+  position: relative;
+
+}
+
+.password-login-box:before {
+  content: "Password";
+  font-size: 1.1rem;
+  position: absolute;
+  border-radius: 2rem;
+  top: .9rem;
+  border-radius: 1rem;
+  left: 1rem;
+
+  color: #aaa;
+  transition: var(--main-transition);
+}
+
+.password-login-box::after {
+  content: "*";
+  height: .3rem;
+  font-size: 1.3rem;
+  position: absolute;
+  top: .9rem;
+  left: 5.8rem;
+  color: red;
+  transition: var(--main-transition);
+}
+
+.password-login-box.move-top:before,
+.password-login-box.move-top:after {
+  transform: translateY(-1.3rem);
+  background-color: #fff;
+  font-size: 1rem;
+  margin-left: -.5rem;
+
+}
+
+.password-login {
+  width: 100%;
+  margin: .5rem auto 1rem auto;
+  height: 2rem;
+  border: 1px solid lightgray;
+  border-radius: .4rem;
+  padding-left: .8rem;
+  transition: var(--main-transition);
+}
+
+.password-login:focus {
+  border: 1px solid var(--lightblue);
+  box-shadow: 0 0px 5px var(--lightblue);
+}
+
+.login-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0rem auto;
+}
+
+.forgot-password {
+  color: var(--lightblue);
+  font-size: .8rem;
+  font-style: italic;
+  cursor: pointer;
+  transition: var(--main-transition);
+}
+
+.forgot-password:hover {
+  color: rgb(19, 92, 226);
+}
+
+.login-btn {
+  width: 90%;
+  height: 2rem;
+  margin: .8rem auto;
+  border: none;
+  background-color: var(--lightblue);
+  color: white;
+  font-size: 1.2rem;
+  border-radius: .4rem;
+  cursor: pointer;
+  transition: var(--main-transition);
+  font-weight: bold;
+}
+
+.login-btn:hover {
+  background-color: var(--darkblue);
+  box-shadow: 0 0 8px var(--lightblue);
+}
+
+
+/* Register */
+
+.register-center {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  z-index: 5;
+  transform: translateX(0%);
+}
+
+.hide-register {
+  transform: translateX(100%);
+}
+
+.register-center form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.link-account {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 2rem 1rem;
+  border-bottom: 1px rgb(231, 231, 231) solid;
+  padding-bottom: 1.6rem;
+  position: relative;
+}
+
+.link-account::after {
+  content: "Or";
+  background-color: #fff;
+  width: 3rem;
+  height: 1rem;
+  font-size: 1rem;
+  position: absolute;
+  bottom: -.3rem;
+  text-align: center;
+  left: 45%;
+}
+
+.link-fb {
+  width: 49%;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  padding: .5rem 0;
+  background-color: #1877F2;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.link-fb i {
+  margin-right: .5rem;
+}
+
+.link-google {
+  width: 49%;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  padding: .5rem 0;
+  background-color: #EA4335;
+  color: #fff;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+.link-google i {
+  margin-right: .5rem;
+}
+
+.title-register {
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0rem 0 .5rem 0;
+  transition: var(--main-transition);
+}
+
+.user-name-register-box {
+  width: 90%;
+  margin: .5rem auto;
+  position: relative;
+}
+
+.user-name-register {
+  height: 2rem;
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: .4rem;
+  transition: var(--main-transition);
+  padding: .8rem;
+  font-size: 1.2rem;
+  font-size: 1rem;
+}
+
+.alert-register {
+  color: #ccc;
+  font-size: .7rem;
+  position: absolute;
+  bottom: -1.1rem;
+  left: 1rem;
+  height: 0;
+  transition: var(--main-transition);
+  overflow: hidden;
+  z-index: 1;
+  /* display: none; */
+}
+
+.show-alert {
+  /* display:block; */
+  height: 1rem;
+
+}
+
+.user-name-register-box:before {
+  content: "Email";
+  font-size: 1.1rem;
+  position: absolute;
+  border-radius: 2rem;
+  top: .3rem;
+  left: 1rem;
+  color: #aaa;
+  height: 1.1rem;
+  transition: var(--main-transition);
+}
+
+.user-name-register-box::after {
+  content: "*";
+  height: .5rem;
+  font-size: 1.3rem;
+  position: absolute;
+  top: .2rem;
+  left: 4rem;
+  color: red;
+  transition: var(--main-transition);
+}
+
+.user-name-register:focus {
+  border: 1px solid var(--lightblue);
+  box-shadow: 0 0px 5px var(--lightblue);
+}
+
+.user-name-register-box.move-top:before,
+.user-name-register-box.move-top:after {
+  transform: translateY(-1.2rem);
+  background: #fff;
+  padding-bottom: -1rem;
+  font-size: 1rem;
+  margin-left: -.5rem;
+
+}
+
+.icon-validate-user {
+  position: absolute;
+  right: -1.2rem;
+  top: .4rem;
+  width: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  height: 1rem;
+  padding-left: .2rem;
+  padding-right: .2rem;
+  overflow: hidden;
+  visibility: hidden;
+}
+
+.slide-icon-validate {
+  width: 100%;
+  height: 100%;
+  transition: var(--main-transition);
+  transform: translateY(-130%);
+}
+
+.change-icon-validate {
+  transform: translateY(-10%);
+}
+
+.icon-validate-user .fa-check {
+  color: greenyellow;
+}
+
+.icon-validate-user .fa-times {
+  color: red;
+}
+
+.password-register-box {
+  width: 90%;
+  margin: 1rem auto;
+  position: relative;
+
+}
+
+.password-register-box-confirm {
+  width: 90%;
+  margin: 0rem auto;
+  position: relative;
+
+}
+
+.password-register-box-confirm:before {
+  content: "Password Confirm";
+  font-size: 1.1rem;
+  position: absolute;
+  border-radius: 1rem;
+  top: .9rem;
+  left: 1rem;
+  color: #aaa;
+  height: 1.1rem;
+  transition: var(--main-transition);
+}
+
+.password-register-box-confirm::after {
+  content: "*";
+  height: .4rem;
+  font-size: 1.3rem;
+  position: absolute;
+  top: .9rem;
+  left: 10rem;
+  color: red;
+  transition: var(--main-transition);
+}
+
+.password-register-box-confirm.move-top:before,
+.password-register-box-confirm.move-top:after {
+  transform: translateY(-1.3rem);
+  background-color: #fff;
+  font-size: 1rem;
+  margin-left: -.5rem;
+
+}
+
+.password-register-confirm {
+  width: 100%;
+  margin: .5rem auto 1rem auto;
+  height: 2rem;
+  border: 1px solid lightgray;
+  border-radius: .4rem;
+  padding-left: .8rem;
+  transition: var(--main-transition);
+}
+
+
+.password-register-box:before {
+  content: "Password";
+  font-size: 1.1rem;
+  position: absolute;
+  border-radius: 1rem;
+  top: .5rem;
+  left: 1rem;
+  height: 1.1rem;
+  color: #aaa;
+  transition: var(--main-transition);
+}
+
+.password-register-box::after {
+  content: "*";
+  height: .3rem;
+  font-size: 1.3rem;
+  position: absolute;
+  top: .5rem;
+  left: 5.8rem;
+  color: red;
+  transition: var(--main-transition);
+}
+
+.password-register-box.move-top:before,
+.password-register-box.move-top:after {
+  transform: translateY(-1.3rem);
+  background-color: #fff;
+  font-size: 1rem;
+  margin-left: -.5rem;
+
+}
+
+.password-register {
+  width: 100%;
+  margin: .2rem auto .2rem auto;
+  height: 2rem;
+  border: 1px solid lightgray;
+  border-radius: .4rem;
+  padding-left: .8rem;
+  transition: var(--main-transition);
+}
+
+.password-register:focus {
+  border: 1px solid var(--lightblue);
+  box-shadow: 0 0px 5px var(--lightblue);
+}
+
+.password-register-confirm:focus {
+  border: 1px solid var(--lightblue);
+  box-shadow: 0 0px 5px var(--lightblue);
+}
+
+.register-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: .7rem auto;
+}
+
+
+.register-btn {
+  width: 90%;
+  height: 2rem;
+  margin: .8rem auto;
+  border: none;
+  background-color: var(--lightblue);
+  color: white;
+  font-size: 1.2rem;
+  border-radius: .4rem;
+  cursor: pointer;
+  transition: var(--main-transition);
+  font-weight: bold;
+}
+
+.register-btn:hover {
+  background-color: var(--darkblue);
+  box-shadow: 0 0 8px var(--lightblue);
 }
