--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,22 @@
   outline: none;
 }
 
+
+
+.preloader{
+  position: absolute;
+  display: grid;
+  place-items: center;
+  visibility: visible;
+  z-index: 999;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+.hide-preloader{
+  visibility: hidden;
+  z-index: -999;
+}
 header {
   display: flex;
   flex-direction: row;
