--- a/css/hotel.css
+++ b/css/hotel.css
@@ -175,6 +175,10 @@ header {
   height: 4rem;
   background-color: #1A7FD9;
   padding: .7rem 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  transition: var(--main-transition);
 }
 
 .form-input-hotel {
@@ -504,6 +508,7 @@ input[type="date"] {
   display: flex;
   flex-direction: column;
   transition: all .1s linear;
+
 }
 .user-manage-box.show-manage-box{
   height: 6rem;
@@ -1356,6 +1361,7 @@ span:hover::before {
 .view-room-btn {
   padding: 1.2rem 1.8rem;
   background-color: #FFFF00;
+  transition: var(--main-transition);
   cursor: pointer;
   border: none;
   box-shadow: 0 2px 4px #ccc;
@@ -1364,6 +1370,12 @@ span:hover::before {
   font-weight: bold;
 }
 
+.view-room-btn:focus{
+  box-shadow: 0 0 16px greenyellow;
+  background-color: #f5f579;
+  transform: translateY(.5rem);
+  font-size: 1.5rem;
+}
 
 
 
@@ -2067,4 +2079,278 @@ span:hover::before {
 .register-btn:hover {
   background-color: var(--darkblue);
   box-shadow: 0 0 8px var(--lightblue);
+}
+
+
+
+
+  /* ================Side Bar Cart=================== */
+
+
+.shopping-cart-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.7);
+  visibility: hidden;
+  z-index: 1;
+}
+.cart-side-bar{
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 35vw;
+  background-color: #fff;
+  padding: .7rem;
+  transform: translateX(100%);
+  transition:var(--main-transition);
+  overflow-y: scroll;
+}
+.shopping-cart-overlay.show{
+  visibility: visible;
+}
+.cart-side-bar.show{
+  transform: translateX(0%);
+}
+.hide-side-bar{
+  font-size: 1.4rem;
+  background:transparent;
+  border: none;
+  cursor: pointer;
+
+}
+.cart-header{
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+}
+.tours-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+
+}
+.tour-center{
+  display: flex;
+  flex-direction: row;
+  background-color: #eee;
+  border-radius: .4rem;
+  position: relative;
+  margin-bottom: 1.5rem;
+  box-shadow: gray 2px 2px 16px;
+}
+.remove-btn{
+  position: absolute;
+  right: .5rem;
+  top: .5rem;
+  border:none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  z-index: 2;
+}
+.img-container{
+  width: 30%;
+}
+.active-center{
+  width:70%;
+  display: flex;
+  flex-direction: row;
+
+}
+.tour-center img{
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: .4rem;
+  border-bottom-left-radius: .4rem;
+}
+.checkout-alert{
+  width:30%;
+  height:100%;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.89);
+  display:grid;
+  place-items: center;
+  border-top-left-radius: .4rem;
+  border-bottom-left-radius: .4rem;
+  visibility: hidden;
+}
+.checkout-alert.show{
+  visibility: visible;
+}
+.checkout-alert .fa-check-circle{
+  color: greenyellow;
+  font-size: 2.8rem;
+}
+.left-col{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  
+
+}
+.hotel-name{
+  font-size: 1.3rem;
+  padding-left: 1rem;
+  color: var(--lightblue);
+ 
+}
+.hotel-name h3{
+  width:9rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.left-col .stars{
+  padding-left: 1rem;
+}
+.room-order{
+  position: relative;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  width:8rem;
+}
+.close-order-box{
+  position: absolute;
+  right: .2rem;
+  top: 1rem;
+}
+.room-order .order-btn{
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+  height: 2.5rem;
+  width: 8rem;
+  background-color: #fff;
+  border: none;
+  border-radius: .3rem;
+  font-style: italic;
+  font-size: 1rem;
+  margin-bottom: .5rem;
+}
+.room-order .number-box-order{
+  position: absolute;
+  bottom: -4.5rem;
+  right: 0rem;
+  display: flex;
+  flex-direction: column;
+  width: 120%;
+  height: 10vh;
+  background-color: var(--lightblue);
+  justify-content:center;
+  align-items: center;
+  border-radius: .3rem;
+  box-shadow: gray 0 4px 16px;
+  visibility: hidden;
+  z-index: 1;
+  color: white;
+ 
+}
+.number-box-order.show{
+  visibility: visible;
+}
+.number-box-order::after {
+  content: "\f0de";
+  font-family: 'Font Awesome 5 Free';
+  position: absolute;
+  font-weight: 900;
+  top: -.7rem;
+  left: 43%;
+  font-size: 1.8rem;
+  color: var(--lightblue);
+}
+.number-box-order .room-order{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  width:100%;
+  margin-bottom: .5rem;
+}
+.number-box-order button{
+  padding: .1rem;
+  background: transparent;
+  border-radius: 50%;
+  border: 1px white solid;
+  color:white;
+  cursor: pointer;
+}
+.number-box-order .customer-order{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  width:100%;
+}
+.right-col{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+
+}
+.right-col .date-center{
+  display: flex;
+  flex-direction: column;
+  padding-top: .5rem;
+  position: relative;
+}
+.right-col .date-center::after{
+  content: '\f0d7';
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free";
+  position: absolute;
+  font-size: 1.5rem;
+  color: var(--lightblue);
+  top: 1.6rem;
+  left: 3rem;
+}
+.right-col .date-center input{
+  padding-left: .6rem;
+  margin:0;
+  width:78%;
+  height: 1.5rem;
+  border-radius: 10px !important;
+  margin-bottom: .2rem;
+  border: none;
+
+}
+.right-col .date-center input[name="start-day"]{
+  margin-bottom: 1rem;
+}
+
+.price-center{
+  color:#7AAF50 ;
+  font-size: 1.3rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+.cart-footer{
+  width:100%;
+  height: 4rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 3rem;
+}
+.title-total{
+  font-size: 1rem;
+  color: #ccc;
+  
+}
+.total-price .digit{
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+.checkout button{
+  background-color: #7AAF50;
+  border: none;
+  padding: .5rem 1rem;
+  font-size: 1.4rem;
+  margin-top: -.8rem;
+  color: #fff;
+  border-radius: .5rem;
+  cursor: pointer;
 }
