--- a/css/hotel.css
+++ b/css/hotel.css
@@ -2126,6 +2126,7 @@ span:hover::before {
   font-size: 1.8rem;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 1rem;
 }
 .tours-container{
   display: flex;
