--- a/css/styles.css
+++ b/css/styles.css
@@ -1703,6 +1703,7 @@ footer .icon-container i {
   font-size: 1.8rem;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 1rem;
 }
 .tours-container{
   display: flex;
